#pragma once

class SageStoreClient
{
public:
    SageStoreClient();
    ~SageStoreClient();

    // Public methods
    void run();

private:
};
