@startuml

!define class class

package "Client" {
  class SageStoreClient {
    +init(): void
    +run(): void
  }

  package "UI" #White {
    class UiManager {
      +initUI(): void
      +updateUI(): void
    }

    class IViewModel <<interface>> {
      +render(): void
    }

    ' Limited ViewModel Inheritance
    IViewModel <|-- PurchaseViewModel
    IViewModel <|-- SaleViewModel
    IViewModel <|-- InventoryViewModel

    note "More ViewModels" as N2
  } 

  package "Models" #White {
    class IModel <<interface>> {
      +init(): void
    } 

    ' Limited Model Inheritance
    IModel <|-- PurchaseModel
    IModel <|-- SaleModel
    IModel <|-- InventoryModel

    note "More Models" as N3
  }

  package "Network" #White {
    class NetworkService {
      +sendRequest(): void
      +receiveResponse(): void
    }

    class IDataSerializer <<interface>> {
      +serialize(): void
      +deserialize(): void
    }

    class JsonSerializer
  }

  ' Relationships
  SageStoreClient -down-> UiManager
  SageStoreClient -down-> IModel
  SageStoreClient -down-> NetworkService
  NetworkService -down-> IDataSerializer
  UiManager -down-> IViewModel

  ' Inheritance
  IDataSerializer <|-- JsonSerializer

  note "SIGNAL-SLOT approach" as N1
  IModel .. N1
  UiManager .. N1

  SaleViewModel . N2
  N2 . PurchaseViewModel

  SaleModel . N3
  N3 . PurchaseModel

@enduml
